--- a/html/style.css
+++ b/html/style.css
@@ -60,9 +60,10 @@ h3{
 
 .display_keyword{
     font-size: 2rem;
-    color:red;
-    float: left;
+    color: blue;
+    /*float: left;*/
 }
+
 
 .content_space p {
     text-align: left;
@@ -70,6 +71,23 @@ h3{
 
 }
 
+#article_list_big{
+    
+    padding-left: 0;
+}
+#article_list_big ul{
+    list-style-type: none;
+
+}
+
+.article_list_small{
+    margin-bottom: 30px;
+    padding-left: 0;
+}
+
+.article_title {
+    color:red;
+}
 
 #footer {
     font-family: 'Nanum Gothic';
@@ -86,6 +104,7 @@ h3{
 #footer a:hover {
     color: #A52A2A;
 }
+
 
 /*위로가기 화살표*/
 /*
