두번째 페이지 명 article -> news_list로 변경 DB 파라미터 값 받아 올 수 있게 준비 완료

--- a/html/style.css
+++ b/html/style.css
@@ -71,23 +71,19 @@ h3{
 
 }
 
-#article_list_big{
-    
+#news_list_big{
     padding-left: 0;
 }
-#article_list_big ul{
+#news_list_big ul{
     list-style-type: none;
 
 }
 
-.article_list_small{
+.news_list_small{
     margin-bottom: 30px;
     padding-left: 0;
 }
 
-.article_title {
-    color:red;
-}
 
 #footer {
     font-family: 'Nanum Gothic';
